final_tool.html

--- a/final_tool.html
+++ b/final_tool.html
@@ -267,6 +267,7 @@
         <div class="tool-card"><a href="https://chemprop.csail.mit.edu/" target="_blank">ChemProp</a><p>A machine learning package for chemical property prediction using D-MPNN architecture.</p></div>
         <div class="tool-card"><a href="https://deepchem.io/" target="_blank">DeepChem</a><p>Open-source ML toolchain that democratizes the use of Deep-learning in drug discovery, material science, quantum chemistry and biology.</p></div>
         <div class="tool-card"><a href="https://www.proteinplus.net/" target="_blank">ProteinPlus</a><p>A webserver for structure-based moleucula modeling. provides functionalities for structure quality assessment, hydrogen placement, search alternative conformations.</p></div>
+        <div class="tool-card"><a href="https://pubs.acs.org/doi/full/10.1021/acsomega.3c07318" target="_blank">PROTAC-design-evaluator (PRODE)</a><p> A novel in-silico methodology for PROTAC designing </p></div>
       </div>
     </div>
   </div>
@@ -422,3 +423,4 @@
 </script>
 </body>
 </html>
+
