--- a/final_tool.html
+++ b/final_tool.html
@@ -168,6 +168,18 @@
   ProtacMLA - PROTAC Mutation & Ligand Analysis
   <a href="tutorial.pdf" target="_blank" class="tutorial-btn">TUTORIAL</a>
 </div>
+<!-- 3D Viewer Heading -->
+<h2 style="
+  text-align: center;
+  color: #0657B6;
+  margin-top: 15px;
+  margin-bottom: 5px;
+  font-size: 22px;
+  font-weight: 700;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+">
+  3D Structure Viewer
+</h2>
 
   <!-- Viewer -->
   <div class="viewer-section">
@@ -423,4 +435,3 @@
 </script>
 </body>
 </html>
-
