mutation_code.html

--- a/mutation_code.html
+++ b/mutation_code.html
@@ -105,9 +105,9 @@
 <div class="container">
   <div class="card">
     <header>
-      <h1>Peptide Mutation </h1>
+      <h1>Protien binding site Mutation </h1>
     </header>
-    <p class="lead">Generate ready-to-use UCSF Chimera Python scripts with desired mutation and optional minimization. Class-wise mode can now produce every combination of selected class members.</p>
+    <p class="lead">Mutates the protein binding peptide region of Stapled peptide PROTAC. <br> Generate ready-to-use UCSF Chimera Python scripts with desired mutation and optional minimization. Class-wise mode can now produce every combination of selected class members.</p>
 
     <!-- Structure Input -->
     <h3>1) Structural Inputs</h3>
